[package]
name = "douyin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4" 
log4rs = "1" 
reqwest = {version = "0.11", features = ["cookies", "gzip"]}
serde = "1"
serde_derive = "1"
serde_json = {version = "1", default-features = false, features = ["alloc"]}
thirtyfour = "0.29"
tokio = {version = "1", features = ["full"]}
ctrlc="3"